--- a/TetrisGame_cursach/TetrisGame_cursach/MainWindow.xaml
+++ b/TetrisGame_cursach/TetrisGame_cursach/MainWindow.xaml
@@ -73,7 +73,7 @@
                     Grid.ColumnSpan="2"
                     Margin="0, 300, 0, 0">
             <TextBlock x:Name="MusicName"
-                       Text="ABOBA"
+                       Text=""
                        TextAlignment="Center"/>
 
         </StackPanel>
