--- a/TetrisGame_cursach/TetrisGame_cursach/Game.xaml
+++ b/TetrisGame_cursach/TetrisGame_cursach/Game.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TetrisGame_cursach"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterOwner"
         Title="TETRIS" Height="600" Width="800"
         MinHeight="600" MinWidth="800"
         Foreground="#CACACA"
